--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -8,6 +8,7 @@
 	box-sizing: border-box;
 	scroll-behavior: smooth;
 }
+/*------------------------------------------------------------------------------------------------*/
 a {
 	text-decoration: none;
 }
@@ -16,6 +17,7 @@ ol,
 li{
 	list-style: none;
 }
+/*------------------------------------------------------------------------------------------------*/
 h1,
 h2,
 h3,
@@ -25,14 +27,156 @@ h6{
 	font-weight: inherit;
 	font-size: inherit;
 }
+/*------------------------------------------------------------------------------------------------*/
 html,
 body{
 	height: 100%;
 	line-height: 1;
-	font-size: 16px;
-	color: #000;
+	font-size: 14px;
+	color: #252b42;
+	font-family: Montserrat;
+	font-weight: 500;
 }
+/*------------------------------------------------------------------------------------------------*/
 .wrapper{
 	min-height: 100%;
 	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+}
+/*------------------------------------------------------------------------------------------------*/
+._container {
+	max-width: 1046px;
+	margin: 0px auto;
+	padding: 0px 15px;
+	box-sizing: content-box;
+}
+._ibg{
+	position: relative;
+}
+._ibg img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+}
+/* ---Header-------------------------------------------------------------------------------------------- */
+.header {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	top: 0;
+	z-index: 50;
+}
+.header__container {
+	display: flex;
+	min-height: 104px;
+	align-items: center;
+}
+.header__Logo {
+	font-size: 24px;
+	font-weight: 700;
+	color: inherit;
+}
+.header__menu {
+	margin: 0px 0px 0px 133px;
+}
+@media (max-width: 479px){
+	.header__container {
+		min-height: 85px;
+	}
+}
+@media (max-width: 992px){
+	.header__menu{
+		margin: 0px 0px 0px 80px;
+	}
+}
+
+@media (max-width: 992px){
+	.header__menu{
+		margin: 0px 0px 0px 80px;
+	}
+}
+@media (max-width: 767px){
+	.header__menu{
+		margin: 0px 0px 0px 40px;
+	}
+}
+@media (max-width: 479px){
+	.header__menu{
+		margin: 0px 0px 0px 20px;
+	}
+}
+.menu {
+	padding: 5px 0px;
+}
+.menu__list {
+	flex-wrap: wrap;
+	display: flex;
+}
+.menu__item:not(:last-child) {
+	margin: 0px 21px 0px 0px;
+}
+.menu__link {
+	color: #737373;
+	line-height: calc(24/14 * 100%);
+	font-weight: 60;
+}
+
+@media (max-width: 479px){
+	.menu__link	{
+		font-size: 18px;
+	}
+}
+
+/*---Main------------------------------------------------------------------------------------------*/
+.page{
+	flex: 1 1 auto;
+}
+/*---Footer----------------------------------------------------------------------------------------*/
+.footer{
+}
+/*---Main-Block------------------------------------------------------------------------------------*/
+.main-block {
+	position: relative;
+}
+.main-block__container {
+}
+
+.main-block__body {
+	padding: 184px 0px 191px 0px;
+	position: relative;
+	z-index: 2;
+	max-width: 509px;
+}
+.main-block__body > *:not(:last-child){
+	margin: 0px 0px 35px 0px;
+}
+.main-block__title {
+	font-size: 58px;
+	line-height: calc(80 / 58 * 100%);
+	font-weight: 800;
+}
+.main-block__text {
+	color: #737373;
+	font-size: 20px;
+	line-height: 150%;
+}
+.main-block__buttons {
+}
+.main-block__button {
+}
+.main-block__button_border {
+}
+.main-block__image{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+}
+.main-block__image img{
+	object-position: center;
 }
