--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -129,6 +129,11 @@ body{
 .page{
 	flex: 1 1 auto;
 }
+.page__services {
+	position: relative;
+	margin: -111px 0px 0px 0px ;
+	z-index: 2;
+}
 /*---Footer----------------------------------------------------------------------------------------*/
 .footer{
 }
@@ -136,7 +141,7 @@ body{
 .main-block {
 	position: relative;
 }
-.main-block__container {
+.main-block__container{
 }
 
 .main-block__body {
@@ -145,6 +150,14 @@ body{
 	z-index: 2;
 	max-width: 400px;
 }
+
+@media (max-width: 992px){
+	.main-block__body{
+		padding: 120px 0px 191px 0px;
+	}
+	
+}
+
 .main-block__body > *:not(:last-child){
 	margin: 0px 0px 35px 0px;
 }
@@ -154,10 +167,21 @@ body{
 	letter-spacing: 0.2px;
 	font-weight: 800;
 }
+@media (max-width: 479px){
+.main-block__title {
+	font-size: 42px;
+}
+
+}
 .main-block__text {
 	color: #737373;
 	font-size: 20px;
 	line-height: 150%;
+}
+@media (max-width: 479px){
+	.main-block__text{
+		color: #585757;
+	}
 }
 .main-block__buttons {
 	display: flex;
@@ -180,6 +204,11 @@ body{
 	border-bottom: #0d5c63 1px solid;
 	margin: 20px 0px; 
 }
+@media (max-width: 479px){
+	.main-block__button{
+		flex: 1 1 100%; /*Делаем кнопки во всю ширину экрана при заданном разрешении*/
+	}
+}
 .main-block__button:not(:last-child){
 	margin-right: 20px;
 }
@@ -189,7 +218,7 @@ body{
 .main-block__button_border:hover {
 	transform: scale(1.1);
 	border: none;
-	background-color:  #ff7b47;
+	background-color:#252b42;
 	color: #fff;
 	box-shadow: #fff 2px 0px 10px;
 }
@@ -217,5 +246,56 @@ body{
 	.main-block__title{
 		font-size: 42px;
 	}
-	
+}
+/* Services */
+
+.services {
+}
+.services__container {
+}
+._container {
+}
+.services__body {
+	display: flex;
+	margin: 0px -15px;
+}
+.services__column {
+	padding: 0px 15px;
+	flex: 0 1 33.333%;
+}
+.services__item {
+	height: 100%;
+	box-shadow: 0 13px 19px rgba(0, 0, 0, 0.07);
+	background-color: #fff;
+	padding: 35px;
+}
+.item-service {
+
+}
+.item-service__green {
+	background-color: #0d5c63;
+}
+.item-service__green .item-service__text{
+	color: #fff;
+}
+.item-service__green .item-service__title{
+	color: #fff;
+}
+.item-service > *:not(:last-child){
+
+}
+.item-service > *:not(:last-child) {
+	margin: 0px 0px 10px 0px;
+}
+.item-service__icon {
+}
+.item-service__title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 133%;
+	letter-spacing: 0.1px;
+}
+.item-service__text {
+	color: #737373;
+	line-height: 142%;
 }
